--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.5",
     "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.7",
     "uuid": "^11.0.2"
   }
 }
